--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
-<div class="container">
-  <h1>Developer Portfolio</h1>
+
+   <app-header></app-header>
+   <div class="container">
+ 
+    <main>
+      
+    </main>
 </div>
+<app-footer></app-footer>
