--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,5 @@
-
-   <app-header></app-header>
-   <div class="container">
- 
-    <main>
-      
-    </main>
-</div>
+<app-header></app-header>
+<main>
+  <app-portfolio-item></app-portfolio-item>
+</main>
 <app-footer></app-footer>
