--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -26,6 +26,16 @@
         
         <strong>Charles D. Hogland</strong>
       </a>
+      <a class="nav-link"
+      [routerLink]="['about']"
+      routerLinkActive="active">About</a>
+      <a class="nav-link"
+      [routerLink]="['portfolio']"
+      routerLinkActive="active">Portfolio</a>
+      <a class="nav-link"
+      [routerLink]="['contact']"
+      routerLinkActive="active">Contact</a>
+      
       <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
