--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-header></app-header>
 <main>
-  <app-portfolio-item></app-portfolio-item>
+  <!-- <app-portfolio-item></app-portfolio-item> -->
 </main>
 <app-footer></app-footer>
+<router-outlet></router-outlet>
