--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer>
+<footer class="fixed-bottom">
   <div class="container">
     <div class="row align-items-center">
       <div class="col">
