--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
+<article>
 <app-header></app-header>
 <main>
-  <!-- <app-portfolio-item></app-portfolio-item> -->
+    <router-outlet></router-outlet>
 </main>
 <app-footer></app-footer>
-<router-outlet></router-outlet>
+</article>
