--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,24 @@
+html {  
+    width: 100%;
+    height: 100%;
+}
 body {
-    margin:0;
+  display: flex;
+  flex-direction: column;
+  height: 100%; /* 1, 3 */
+  margin: 0;
+}
+main {
+  flex: 1 0 auto; /* 2 */
+  padding: var(--space) var(--space) 0;
+  width: 100%;
+}
+footer {
+  flex: none;
+}
+article {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
 }
