--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,42 +1,94 @@
 <header class="mb-4">
   <div class="bg-dark collapse" id="navbarHeader" style="">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-2 py-4">
-            <img class="header_img_charlie" src="./assets/images/Charlie-1.jpg" />
+    <div class="container ">
+      <div class="row align-items-center">
+        <div class="col-sm py-2 mt-2">
+          <img class="header_img_charlie ml-md-4" src="./assets/images/Charlie-1.jpg" />
         </div>
-        <div class="col-sm py-4">
-          <h4 class="text-white">About</h4>
-          <p class="text-muted">ONLINE: I’m an ambitious Front-End Developer/UX Engineer located in St. Louis, Missouri. My focus is driven by my passion for the arts, entertainment, and the world wide web. I’ve been making websites since my early days of middle school in 2001 when frames, tables, and animated GIFs were commonly used. The media has expanded a lot since I began and I do my best to continue to grow with it. I’ve been in business since 2007 and work mostly with designers, agencies and other freelancers. I’ve been specializing in front-end development, WordPress, and responsive design for several years now, and enjoy a good challenge. JavaScript and CSS3 animations are now a favorite of mine. Code organization and semantics are extremely important to me, and I usually end up spending extra time just to rewrite a module to be a little bit clearer or easier to find. I enjoy staying busy! OFFLINE: My work assistants are two 90 lb. mutts that push me to work faster so they can go on walks sooner. When I’m not coding, I prefer to be traveling with my life partner, hiking/biking and playing drums. I’m always traveling to new places and lived in Chicago for a year in 2006, Montana for nearly 2 years, traveling the Pacific Northwest playing with an Americana Rock band until 2008 and have moved back to my hometown until my next adventure. I also enjoy wood working and simply breaking/fixing things as hobbies.</p>
-        </div>
-        <div class="col-sm py-4">
+       
+        <div class="col-auto py-2">
           <h4 class="text-white">Contact</h4>
-          <ul class="list-unstyled">
-            <li><a href="#" class="text-white">Follow on Twitter</a></li>
-            <li><a href="#" class="text-white">Like on Facebook</a></li>
-            <li><a href="#" class="text-white">Email me</a></li>
-          </ul>
+          <nav class="nav nav-masthead">
+            <a href="https://youtube.com/chogland" class="nav-link youtube_hover text-white"><svg aria-hidden="true"
+                focusable="false" data-prefix="fab" data-icon="youtube" role="img" xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 576 512" class="svg-inline--fa fa-youtube fa-w-18 fa-2x">
+                <path fill="currentColor"
+                  d="M549.655 124.083c-6.281-23.65-24.787-42.276-48.284-48.597C458.781 64 288 64 288 64S117.22 64 74.629 75.486c-23.497 6.322-42.003 24.947-48.284 48.597-11.412 42.867-11.412 132.305-11.412 132.305s0 89.438 11.412 132.305c6.281 23.65 24.787 41.5 48.284 47.821C117.22 448 288 448 288 448s170.78 0 213.371-11.486c23.497-6.321 42.003-24.171 48.284-47.821 11.412-42.867 11.412-132.305 11.412-132.305s0-89.438-11.412-132.305zm-317.51 213.508V175.185l142.739 81.205-142.739 81.201z"
+                  class=""></path>
+              </svg></a>
+            <a href="#" class="nav-link text-white git_hover"><svg aria-hidden="true" focusable="false"
+                data-prefix="fal" data-icon="code-branch" role="img" xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 384 512" class="svg-inline--fa fa-code-branch fa-w-12 fa-2x">
+                <path fill="currentColor"
+                  d="M384 144c0-44.2-35.8-80-80-80s-80 35.8-80 80c0 39.2 28.2 71.8 65.5 78.7-.8 17.2-5 30.4-12.7 40-17.5 21.8-53.1 25.2-90.7 28.7-28.2 2.6-57.4 5.4-80.4 16.9-3.4 1.7-6.7 3.6-9.7 5.7V158.4c36.5-7.4 64-39.7 64-78.4 0-44.2-35.8-80-80-80S0 35.8 0 80c0 38.7 27.5 71 64 78.4v195.2C27.5 361 0 393.3 0 432c0 44.2 35.8 80 80 80s80-35.8 80-80c0-36.9-24.9-67.9-58.9-77.2 5-9.6 12.3-14.6 19-18 17.5-8.8 42.5-11.2 68.9-13.7 42.6-4 86.7-8.1 112.7-40.5 12.4-15.5 19-35.5 19.8-60.7C357.3 214 384 182.1 384 144zM32 80c0-26.5 21.5-48 48-48s48 21.5 48 48-21.5 48-48 48-48-21.5-48-48zm96 352c0 26.5-21.5 48-48 48s-48-21.5-48-48c0-26.4 21.4-47.9 47.8-48h.6c26.3.2 47.6 21.7 47.6 48zm187.8-241.5L304 192c-26.5 0-48-21.5-48-48s21.5-48 48-48 48 21.5 48 48c0 22.4-15.4 41.2-36.2 46.5z"
+                  class=""></path>
+              </svg></a>
+
+            <a href="#" class="nav-link text-white mail_hover"><svg aria-hidden="true" focusable="false"
+                data-prefix="fal" data-icon="envelope" role="img" xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 512 512" class="svg-inline--fa fa-envelope fa-w-16 fa-2x">
+                <path fill="currentColor"
+                  d="M464 64H48C21.5 64 0 85.5 0 112v288c0 26.5 21.5 48 48 48h416c26.5 0 48-21.5 48-48V112c0-26.5-21.5-48-48-48zM48 96h416c8.8 0 16 7.2 16 16v41.4c-21.9 18.5-53.2 44-150.6 121.3-16.9 13.4-50.2 45.7-73.4 45.3-23.2.4-56.6-31.9-73.4-45.3C85.2 197.4 53.9 171.9 32 153.4V112c0-8.8 7.2-16 16-16zm416 320H48c-8.8 0-16-7.2-16-16V195c22.8 18.7 58.8 47.6 130.7 104.7 20.5 16.4 56.7 52.5 93.3 52.3 36.4.3 72.3-35.5 93.3-52.3 71.9-57.1 107.9-86 130.7-104.7v205c0 8.8-7.2 16-16 16z"
+                  class=""></path>
+              </svg></a>
+
+          </nav>
         </div>
+        <div class="col-auto py-2">
+          <h4 class="text-white" [routerLink]="['portfolio']">Portfolio</h4>
+          <nav class="nav nav-masthead">
+            <a class="nav-link web_hover text-white" [routerLink]="['Web']" routerLinkActive="active"><svg
+                aria-hidden="true" focusable="false" data-prefix="fal" data-icon="code" role="img"
+                xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" class="svg-inline--fa fa-code fa-w-18 fa-2x">
+                <path fill="currentColor"
+                  d="M228.5 511.8l-25-7.1c-3.2-.9-5-4.2-4.1-7.4L340.1 4.4c.9-3.2 4.2-5 7.4-4.1l25 7.1c3.2.9 5 4.2 4.1 7.4L235.9 507.6c-.9 3.2-4.3 5.1-7.4 4.2zm-75.6-125.3l18.5-20.9c1.9-2.1 1.6-5.3-.5-7.1L49.9 256l121-102.5c2.1-1.8 2.4-5 .5-7.1l-18.5-20.9c-1.8-2.1-5-2.3-7.1-.4L1.7 252.3c-2.3 2-2.3 5.5 0 7.5L145.8 387c2.1 1.8 5.3 1.6 7.1-.5zm277.3.4l144.1-127.2c2.3-2 2.3-5.5 0-7.5L430.2 125.1c-2.1-1.8-5.2-1.6-7.1.4l-18.5 20.9c-1.9 2.1-1.6 5.3.5 7.1l121 102.5-121 102.5c-2.1 1.8-2.4 5-.5 7.1l18.5 20.9c1.8 2.1 5 2.3 7.1.4z"
+                  class=""></path>
+              </svg></a>
+            <a class="nav-link design_hover text-white" [routerLink]="['Design']" routerLinkActive="active"><svg
+                aria-hidden="true" focusable="false" data-prefix="fas" data-icon="pencil-alt" role="img"
+                xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"
+                class="svg-inline--fa fa-pencil-alt fa-w-16 fa-2x">
+                <path fill="currentColor"
+                  d="M497.9 142.1l-46.1 46.1c-4.7 4.7-12.3 4.7-17 0l-111-111c-4.7-4.7-4.7-12.3 0-17l46.1-46.1c18.7-18.7 49.1-18.7 67.9 0l60.1 60.1c18.8 18.7 18.8 49.1 0 67.9zM284.2 99.8L21.6 362.4.4 483.9c-2.9 16.4 11.4 30.6 27.8 27.8l121.5-21.3 262.6-262.6c4.7-4.7 4.7-12.3 0-17l-111-111c-4.8-4.7-12.4-4.7-17.1 0zM124.1 339.9c-5.5-5.5-5.5-14.3 0-19.8l154-154c5.5-5.5 14.3-5.5 19.8 0s5.5 14.3 0 19.8l-154 154c-5.5 5.5-14.3 5.5-19.8 0zM88 424h48v36.3l-64.5 11.3-31.1-31.1L51.7 376H88v48z"
+                  class=""></path>
+              </svg></a>
+            <a class="nav-link music_hover text-white" [routerLink]="['Music']" routerLinkActive="active"><svg
+                aria-hidden="true" focusable="false" data-prefix="fas" data-icon="headphones" role="img"
+                xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"
+                class="svg-inline--fa fa-headphones fa-w-16 fa-2x">
+                <path fill="currentColor"
+                  d="M256 32C114.52 32 0 146.496 0 288v48a32 32 0 0 0 17.689 28.622l14.383 7.191C34.083 431.903 83.421 480 144 480h24c13.255 0 24-10.745 24-24V280c0-13.255-10.745-24-24-24h-24c-31.342 0-59.671 12.879-80 33.627V288c0-105.869 86.131-192 192-192s192 86.131 192 192v1.627C427.671 268.879 399.342 256 368 256h-24c-13.255 0-24 10.745-24 24v176c0 13.255 10.745 24 24 24h24c60.579 0 109.917-48.098 111.928-108.187l14.382-7.191A32 32 0 0 0 512 336v-48c0-141.479-114.496-256-256-256z"
+                  class=""></path>
+              </svg></a>
+          </nav>
+        </div>
+      </div>
+      <div class="row">
+          <div class="col text-white">
+              I’m an ambitious Front-End Developer/UX Engineer located in St. Louis, Missouri. My focus is driven by my
+              passion for the arts, entertainment, and the world wide web. I’ve been making websites since my early days of
+              middle school in 2001 when frames, tables, and animated GIFs were commonly used. Code organization and
+              semantics are extremely important to me, and I usually end up spending extra time just to rewrite a module to
+              be a little bit clearer or easier to find. I enjoy staying busy! When I’m not coding, I prefer to be traveling
+              with my life partner, hiking/biking and playing drums. I’m always traveling to new places and lived in Chicago
+              for a year in 2006, Montana for nearly 2 years, traveling the Pacific Northwest playing with an Americana Rock
+              band until 2008 and have moved back to my hometown until my next adventure. I also enjoy wood working and
+              simply breaking/fixing things as hobbies.
+            </div>
       </div>
     </div>
   </div>
   <div class="navbar navbar-dark bg-dark shadow-sm">
-    <div class="container d-flex justify-content-between">
-      <a href="#" class="navbar-brand d-flex align-items-center">
-        
+    <div class="container d-flex justify-content-end p-0">
+      <a href="#" class="col navbar-brand d-flex align-items-center">
+
         <strong>Charles D. Hogland</strong>
       </a>
-      <a class="nav-link"
-      [routerLink]="['about']"
-      routerLinkActive="active">About</a>
-      <a class="nav-link"
-      [routerLink]="['portfolio']"
-      routerLinkActive="active">Portfolio</a>
-      <a class="nav-link"
-      [routerLink]="['contact']"
-      routerLinkActive="active">Contact</a>
-      
-      <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
+
+      <a class="text-muted mr-2" aria-disabled="true">Live Coding/Designing<span
+          class="live-status offline p-1 ml-1">OFFLINE</span></a>
+      <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarHeader"
+        aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
     </div>
