--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,23 +1,4 @@
-<div style="width: 60%; background-color: rgba(52, 58, 64, 0.8); border-radius: 3px; margin-top: 5%; margin-left: 20%;">
-    <p style="font-size: 3vw; color: white; text-align: center">Portfolio</p>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    </div>
+<div class="container">
+    <p>Portfolio</p>
+   <app-portfolio-item></app-portfolio-item>
+</div>
