Some help from Mario @CodeMentor

--- a/src/app/portfolio-item-details/portfolio-item-details.component.html
+++ b/src/app/portfolio-item-details/portfolio-item-details.component.html
@@ -1,7 +1,5 @@
-<div *ngIf="selectedItem">
-
-    <h2>{{selectedItem.name | uppercase}} Details</h2>
-    <div><span>id: </span>{{selectedItem.id}}</div>
- 
+<div class="container">
+    <p>Name: {{itemDataToShow?.name}}</p>
+    <p>description: {{itemDataToShow?.description}}</p>
   
   </div>
