--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,89 @@
-<header class="mb-4">
-  <div class="bg-dark collapse" id="navbarHeader" style="">
+<div class="bg--dark-blue position-fixed collapse" id="navDrawer">
+  <div class="container nav-masthead">
+    <nav class="row nav text-center">
+      <div class="col-12 nav-link" id="nav-close" data-toggle="collapse" data-target="#navDrawer" aria-controls="navDrawer"
+        aria-expanded="false" aria-label="Toggle navigation">
+        CLOSE
+      </div>
+      <div class="col-12 nav-link">
+        ABOUT ME
+      </div>
+      <div class="col-12 nav-link">
+        MY WORKS
+      </div>
+      <div class="col-12 nav-link">
+        CONTACT
+      </div>
+
+
+      <div class="col">
+        <a href="https://youtube.com/chogland" class="nav-link youtube_hover text-white"><svg aria-hidden="true"
+            focusable="false" data-prefix="fab" data-icon="youtube" role="img" xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 576 512" class="svg-inline--fa fa-youtube fa-w-18 fa-2x">
+            <path fill="currentColor"
+              d="M549.655 124.083c-6.281-23.65-24.787-42.276-48.284-48.597C458.781 64 288 64 288 64S117.22 64 74.629 75.486c-23.497 6.322-42.003 24.947-48.284 48.597-11.412 42.867-11.412 132.305-11.412 132.305s0 89.438 11.412 132.305c6.281 23.65 24.787 41.5 48.284 47.821C117.22 448 288 448 288 448s170.78 0 213.371-11.486c23.497-6.321 42.003-24.171 48.284-47.821 11.412-42.867 11.412-132.305 11.412-132.305s0-89.438-11.412-132.305zm-317.51 213.508V175.185l142.739 81.205-142.739 81.201z"
+              class=""></path>
+          </svg></a>
+        <a href="https://github.com/chogland" class="nav-link text-white git_hover"><svg aria-hidden="true"
+            focusable="false" data-prefix="fal" data-icon="code-branch" role="img" xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 384 512" class="svg-inline--fa fa-code-branch fa-w-12 fa-2x">
+            <path fill="currentColor"
+              d="M384 144c0-44.2-35.8-80-80-80s-80 35.8-80 80c0 39.2 28.2 71.8 65.5 78.7-.8 17.2-5 30.4-12.7 40-17.5 21.8-53.1 25.2-90.7 28.7-28.2 2.6-57.4 5.4-80.4 16.9-3.4 1.7-6.7 3.6-9.7 5.7V158.4c36.5-7.4 64-39.7 64-78.4 0-44.2-35.8-80-80-80S0 35.8 0 80c0 38.7 27.5 71 64 78.4v195.2C27.5 361 0 393.3 0 432c0 44.2 35.8 80 80 80s80-35.8 80-80c0-36.9-24.9-67.9-58.9-77.2 5-9.6 12.3-14.6 19-18 17.5-8.8 42.5-11.2 68.9-13.7 42.6-4 86.7-8.1 112.7-40.5 12.4-15.5 19-35.5 19.8-60.7C357.3 214 384 182.1 384 144zM32 80c0-26.5 21.5-48 48-48s48 21.5 48 48-21.5 48-48 48-48-21.5-48-48zm96 352c0 26.5-21.5 48-48 48s-48-21.5-48-48c0-26.4 21.4-47.9 47.8-48h.6c26.3.2 47.6 21.7 47.6 48zm187.8-241.5L304 192c-26.5 0-48-21.5-48-48s21.5-48 48-48 48 21.5 48 48c0 22.4-15.4 41.2-36.2 46.5z"
+              class=""></path>
+          </svg></a>
+
+        <a href="#" class="nav-link text-white mail_hover"><svg aria-hidden="true" focusable="false" data-prefix="fal"
+            data-icon="envelope" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"
+            class="svg-inline--fa fa-envelope fa-w-16 fa-2x">
+            <path fill="currentColor"
+              d="M464 64H48C21.5 64 0 85.5 0 112v288c0 26.5 21.5 48 48 48h416c26.5 0 48-21.5 48-48V112c0-26.5-21.5-48-48-48zM48 96h416c8.8 0 16 7.2 16 16v41.4c-21.9 18.5-53.2 44-150.6 121.3-16.9 13.4-50.2 45.7-73.4 45.3-23.2.4-56.6-31.9-73.4-45.3C85.2 197.4 53.9 171.9 32 153.4V112c0-8.8 7.2-16 16-16zm416 320H48c-8.8 0-16-7.2-16-16V195c22.8 18.7 58.8 47.6 130.7 104.7 20.5 16.4 56.7 52.5 93.3 52.3 36.4.3 72.3-35.5 93.3-52.3 71.9-57.1 107.9-86 130.7-104.7v205c0 8.8-7.2 16-16 16z"
+              class=""></path>
+          </svg></a>
+
+      </div>
+    </nav>
+  </div>
+</div>
+
+<header class="p-2 pt-4 p-md-5 bg--dark-blue ">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-10">
+        <div class="header_md text--blue">
+          HELLO. MY NAME IS
+        </div>
+        <div class="header_lg p-0 m-0 text--white">
+          CHARLIE HOGLAND
+        </div>
+        <div class="header_md text--orange">
+          USER EXPERIENCE
+        </div>
+        <div class="header_sm text--orange">
+          designer | stategist | developer
+        </div>
+      </div>
+      <div class="col-md-2">
+        <img src="../../assets/images/Charlie-Header.png" class="img-charlie d-none d-md-block" alt="Charlie Hogland" />
+        <div class="text-right pt-2">
+
+          <i id="menu-select" class="pr-0 mr-0 navbar-toggler collapsed fas fa-bars text--white" data-toggle="collapse"
+            data-target="#navDrawer" aria-controls="navDrawer" aria-expanded="false" aria-label="Toggle navigation"></i>
+        </div>
+      </div>
+    </div>
+    <!-- <div class="row">
+            <div class="col">
+                <a class="text-muted" aria-disabled="true">Live Coding/Designing
+                    <span class="live-status offline p-1 ml-1">OFFLINE</span></a>
+            </div>
+        </div> -->
+
+
+  </div>
+
+
+
+  <!-- <div class="bg-dark collapse" id="navbarHeader" style="">
     <div class="container ">
       <div class="row align-items-center">
         <div class="col-sm py-2 mt-2">
@@ -92,5 +176,5 @@
         <span class="navbar-toggler-icon"></span>
       </button>
     </div>
-  </div>
+  </div> -->
 </header>
