--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,4 +1,10 @@
+<div class="section-header">
+    <div class="container section-header-text text-white">
+        MY WORKS
+    </div>
+</div>
+
 <div class="container">
-    <h1 >Portfolio</h1>
-   <app-portfolio-item></app-portfolio-item>
+
+    <app-portfolio-item></app-portfolio-item>
 </div>
