--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -16,7 +16,7 @@
       </div>
 
 
-      <div class="col">
+      <div class="position-relative col">
         <a href="https://youtube.com/chogland" class="nav-link youtube_hover text-white"><svg aria-hidden="true"
             focusable="false" data-prefix="fab" data-icon="youtube" role="img" xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 576 512" class="svg-inline--fa fa-youtube fa-w-18 fa-2x">
