--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -30,18 +30,20 @@
     border-bottom-color: #fff;
   }
 
+  div.nav-link {
+    font-size:144px;
+   }
   .nav-link {
-    padding: 0.15rem 0.2rem;
     font-weight: 700;
     color: rgba(255, 255, 255, 0.5);
     background-color: transparent;
     border-bottom: 0.25rem solid transparent;
-    font-size:144px;
- 
+  font-size:24px;
+    display: inline-block;
     @include media-breakpoint-down(md) { 
       font-size: 58px; 
     }
-   
+
 
 
     cursor:pointer;
@@ -59,6 +61,10 @@
           content: " Web";
           display: block;
     position: absolute;
+    top: 0;
+    left: 0;
+    text-align:center;
+    line-height: 78%;
         }
       }
       &.design_hover {
@@ -69,6 +75,10 @@
           content: " Design";
           display: block;
     position: absolute;
+    top: 0;
+    left: 0;
+    text-align:center;
+    line-height: 78%;
         }
       }
       &.music_hover {
@@ -78,6 +88,10 @@
         &:after {
           content: " Music";display: block;
           position: absolute;
+          top: 0;
+          left: 0;
+          text-align:center;
+          line-height: 78%;
         }
       }
       &.git_hover {
@@ -87,6 +101,11 @@
         &:after {
           content: " Git Hub";display: block;
           position: absolute;
+          top: 0;
+          left: 0;
+          text-align:center;
+          line-height: 78%;
+        
         }
       }
       &.youtube_hover {
@@ -96,6 +115,10 @@
         &:after {
           content: " YouTube";display: block;
           position: absolute;
+          top: 0;
+    left: 0;
+    text-align:center;
+    line-height: 78%;
         }
       }
       &.mail_hover {
@@ -105,6 +128,10 @@
         &:after {
           content: " E-Mail";display: block;
           position: absolute;
+          top: 0;
+          left: 0;
+          text-align:center;
+          line-height: 78%;
         }
       }
     }
