--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,4 +1,7 @@
 @import "../../app.scss";
+@import "../../variables.scss";
+
+
 
 #navDrawer {
   width:100%;
@@ -9,6 +12,131 @@
   left:0;
   bottom:0;
   right:0;
+}
+
+header {
+  transition: .7s all;
+	-moz-transition: .7s all;
+	-webkit-transition: .7s all;
+	-o-transition: .7s all;
+// &.small {
+// height:40px;
+// position:fixed;
+// top:0;
+// width:100%;
+// z-index:100;
+
+// .header_lg {
+//   font-size: 25px;
+//   line-height: normal;
+// display:inline-block;
+//   @include media-breakpoint-down(md) {  font-size: 25px;line-height: 55px; }
+// }
+// .header_md {
+//   display:none !important;
+// }
+
+// .header_sm {
+//   display:none  !important;
+// }
+
+// }
+&.large {}
+  user-select: none;
+  .uppertextleft {
+    color: white;
+    font-size: 2em;
+    padding-right: 1rem;
+    padding-top: 20px;
+    margin-left: -1rem;
+  }
+
+  .uppertextright {
+    color: white;
+    font-size: 2em;
+    padding-left: 1.5rem;
+    padding-top: 20px;
+    opacity: 0.2;
+  }
+  .toggle1 {
+    
+    position: relative;
+    cursor: pointer;
+    &:before {
+      content: "";
+      position: relative;
+      width: 70px;
+      height: 28px;
+      top: 7px;
+      left: 5px;
+      background: $color-grey;
+      opacity: 0.7;
+      display: block;
+      border-radius: 15px;
+      transition: background 0.3s ease;
+    }
+    span {
+      position: absolute;
+      top: 2px;
+      left: 5px;
+      width: 35px;
+      height: 35px;
+      display: block;
+      background: $color-blue;
+      border: 1px solid $color-blue;
+      border-radius: 50%;
+      // box-shadow: 0px 0px 8px rgba($darkpurple, 0.4);
+      transition: all 0.3s ease;
+      &:before {
+        content: "";
+        position: absolute;
+        display: block;
+        margin: -8px;
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        background: rgba($color-orange, 0.5);
+        transform: scale(0);
+        opacity: 1;
+      }
+      .fa-pen {
+        color: white;
+        display: flex;
+        justify-content: center;
+        margin-top: 8px;
+      }
+      .fa-music {
+        display: none;
+      }
+    }
+  }
+
+  #checkbox:checked + .toggle1 {
+    &:before {
+      background: rgba(white, 0.7);
+    }
+    span {
+      background: $color-orange;
+      transform: translateX(35px);
+      border: 1px solid $color-orange;
+      // box-shadow: 0px 0px 10px rgba(white, 0.3);
+      &:before {
+        transform: scale(2);
+        opacity: 0;
+        transition: all 0.5s ease;
+      }
+      .fa-pen {
+        display: none;
+      }
+      .fa-music {
+        color: white;
+        display: flex;
+        justify-content: center;
+        margin-top: 8px;
+      }
+    }
+  }
+
 }
 
 .img-charlie {
@@ -42,6 +170,9 @@
     display: inline-block;
     @include media-breakpoint-down(md) { 
       font-size: 58px; 
+    }
+    &:hover {
+      color:$orange;
     }
 
 
@@ -137,3 +268,5 @@
     }
   }
 }
+
+
