--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,10 +1,13 @@
-<div class="section-header">
-    <div class="container section-header-text text-white">
+<!-- <div class="section-header showDeveloper">
+    <div class="container section-header-text text-white ">
         MY WORKS
     </div>
 </div>
-
-<div class="container">
-
+<div class="section-header showDrummer">
+    <div class="container section-header-text text-white ">
+        MY PROJECTS
+    </div>
+</div> -->
+<div class="container my-5">
     <app-portfolio-item></app-portfolio-item>
 </div>
