outwith bootstrap jS and in with angular bootstrap, minor style changes, removed jquery. new profile layout. imported portfolio items from current wordpress site.

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,105 @@
-<p>Hi Dogg</p>
+<div class="container my-md-5">
+    <div class="row">
+        <div class="col-12 col-md-6 about-online-profile-image">
+            <div class="row h-100">
+                <div class="col text-center align-self-center">
+
+                    <div> <img src="http://www.charliehogland.com/wp-content/uploads/2020/03/Hog_LinkedIn.jpg" alt="" />
+                    </div>
+                    <div class="row justify-content-center py-4">
+                        <a target="_blank" class="a-blue" style="box-shadow: none;"
+                        href="mailto:me@charliehogland.com" rel="noopener noreferrer">
+                        <div class="contact-icon">
+                            <i class="fas fa-envelope"></i> <br />
+                            E-Mail
+                        </div>
+                    </a>
+                        <a target="_blank" class="a-linkedinblue" style="box-shadow: none;"
+                        href="https://www.linkedin.com/in/charlie-hogland-60a54655/" rel="noopener noreferrer">
+                        <div class="contact-icon">
+                            <i class="fab fa-linkedin"></i> <br />
+                            LinkedIn
+                        </div>
+                    </a>
+                        <a target="_blank" class="a-adobered" style="box-shadow: none;"
+                    href="http://www.charliehogland.com/wp-content/uploads/2020/03/2020.pdf" rel="noopener noreferrer">
+                        <div class="contact-icon">
+                            <i class="far fa-file-pdf"></i> <br />
+                            Résumé
+                        </div>
+                    </a>
+                      
+                    </div>
+
+                </div>
+
+
+            </div>
+
+        </div>
+        <div class="col-12 col-md-6  about-online p-5">
+            <h2><b>At the Office</b></h2>
+            <p>
+
+                I’m an ambitious Front-End Developer/UX Engineer
+                located in St. Louis, Missouri. My focus is driven by my passion for the arts, entertainment, and the
+                world wide
+                web. I’ve been making websites since my early days of high school in 2001 when frames, tables, and
+                animated GIFs
+                were commonly used. The media has expanded a lot since I began and I do my best to continue to grow with
+                it.
+                I’ve been providing services since 2007 and work mostly with designers, agencies and other freelancers.
+                I’ve
+                been specializing in front-end development, WordPress, and responsive design for several years now, and
+                enjoy a
+                good challenge. JavaScript and CSS3 animations are now a favorite of mine. Code organization and
+                semantics are
+                extremely important to me, and I usually end up spending extra time just to rewrite a module to be a
+                little bit
+                clearer or easier to find.
+                <a href="http://www.charliehogland.com/category/portfolio/" rel="noopener noreferrer">
+                <div class="btn btn-outline-success mt-4 btn-lg btn-block">  View Portfolio</div>
+            </a>
+            </p>
+                
+        </div>
+
+    </div>
+    <div class="row">
+
+
+        <div class="col-6 p-5">
+            <h2 id="out_office_toggle"><b>Outside the Office</b></h2>
+            <p>
+                <br />My work assistants are two 90 lb. mutts that push
+                me to work faster so they can go on walks sooner. When I’m not coding, I prefer to be traveling with my
+                life
+                partner, hiking/biking and playing drums. I’m always traveling to new places and lived in Chicago for a
+                year in
+                2006, Montana for nearly 2 years, traveling the Pacific Northwest playing with an Americana Rock band
+                until 2008
+                and have moved back to my hometown until my next adventure. I also enjoy wood working and simply
+                breaking/fixing
+                things as hobbies.
+                <a  href="https://www.youtube.com/watch?v=fqbekdoYhzs&amp;list=PLrtMYHByZ0adtAcFBD2Z-5bmTF3guf0ZC" rel="noopener noreferrer">
+                    <div class="btn btn-outline-success mt-4 btn-lg btn-block">  Watch Me Drum</div>
+                </a>
+            </p>
+        
+        </div>
+        <div class="col-6 about-offline-profile-image">
+            <div class="row h-100">
+                <div class="col text-center align-self-center">
+                    <div> <img class="curve"
+                            src="http://www.charliehogland.com/wp-content/uploads/2018/05/36416_414773060944_5665034_n.jpg"
+                            alt=""></div>
+
+                </div>
+
+
+            </div>
+
+        </div>
+
+    </div>
+</div>
