--- a/src/app/portfolio-item-details/portfolio-item-details.component.html
+++ b/src/app/portfolio-item-details/portfolio-item-details.component.html
@@ -1,5 +1,7 @@
 <div class="container">
-  <p>Name: {{itemDataToShow?.name}}</p>
+  <h2>Name: {{itemDataToShow?.name}}</h2>
   <p>description: {{itemDataToShow?.description}}</p>  
-  
+  <div class="col">
+    <img src="{{itemDataToShow?.image}}" alt="" />
+  </div>
 </div>
