--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -1,5 +1,4 @@
-@import "../../app.scss";
-@import "../../variables.scss";
+@import "../../styles.scss";
 
 .section-header {
     &.showDeveloper {
