--- a/src/app/portfolio-item/portfolio-item.component.html
+++ b/src/app/portfolio-item/portfolio-item.component.html
@@ -4,7 +4,7 @@
     <div class="col-md-4" *ngFor="let item of items" >
       <div class="card mb-4 box-shadow {{item.type}}">
         <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail" alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;" src={{item.image}} data-holder-rendered="true">
-        <div class="card-body"><h1>{{ item.name }}: {{ item.id }}</h1>
+        <div class="card-body"><h1>{{ item.name }}</h1>
           <p class="card-text">{{ item.description }}</p>
           <p class="card-text">{{ item.type }}</p>
           <div class="d-flex justify-content-between align-items-center">
