Updated Title, rearranged bootstrap and overwrote theme colors, playing with a hovers, fixed menu so it closes after selecting page

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -7,21 +7,21 @@
                     <div> <img src="http://www.charliehogland.com/wp-content/uploads/2020/03/Hog_LinkedIn.jpg" alt="" />
                     </div>
                     <div class="row justify-content-center py-4">
-                        <a target="_blank" class="a-blue" style="box-shadow: none;"
+                        <a target="_blank" class="a-blue contact-icon-a" style="box-shadow: none;"
                         href="mailto:me@charliehogland.com" rel="noopener noreferrer">
                         <div class="contact-icon">
                             <i class="fas fa-envelope"></i> <br />
                             E-Mail
                         </div>
                     </a>
-                        <a target="_blank" class="a-linkedinblue" style="box-shadow: none;"
+                        <a target="_blank" class="a-linkedinblue  contact-icon-a" style="box-shadow: none;"
                         href="https://www.linkedin.com/in/charlie-hogland-60a54655/" rel="noopener noreferrer">
                         <div class="contact-icon">
                             <i class="fab fa-linkedin"></i> <br />
                             LinkedIn
                         </div>
                     </a>
-                        <a target="_blank" class="a-adobered" style="box-shadow: none;"
+                        <a target="_blank" class="a-adobered  contact-icon-a" style="box-shadow: none;"
                     href="http://www.charliehogland.com/wp-content/uploads/2020/03/2020.pdf" rel="noopener noreferrer">
                         <div class="contact-icon">
                             <i class="far fa-file-pdf"></i> <br />
@@ -58,7 +58,7 @@
                 little bit
                 clearer or easier to find.
                 <a href="http://www.charliehogland.com/category/portfolio/" rel="noopener noreferrer">
-                <div class="btn btn-outline-success mt-4 btn-lg btn-block">  View Portfolio</div>
+                <div class="btn btn-outline-primary mt-4 btn-lg btn-block">  View Portfolio</div>
             </a>
             </p>
                 
@@ -82,7 +82,7 @@
                 breaking/fixing
                 things as hobbies.
                 <a  href="https://www.youtube.com/watch?v=fqbekdoYhzs&amp;list=PLrtMYHByZ0adtAcFBD2Z-5bmTF3guf0ZC" rel="noopener noreferrer">
-                    <div class="btn btn-outline-success mt-4 btn-lg btn-block">  Watch Me Drum</div>
+                    <div class="btn btn-outline-primary mt-4 btn-lg btn-block">  Watch Me Drum</div>
                 </a>
             </p>
         
