--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -15,10 +15,10 @@
 }
 
 header {
-  transition: .7s all;
-	-moz-transition: .7s all;
-	-webkit-transition: .7s all;
-  -o-transition: .7s all;
+  // transition: .7s all;
+	// -moz-transition: .7s all;
+	// -webkit-transition: .7s all;
+  // -o-transition: .7s all;
   user-select: none;
 
     &.small {
@@ -64,7 +64,7 @@ header {
       opacity: 0.7;
       display: block;
       border-radius: 15px;
-      transition: background 0.3s ease;
+      // transition: background 0.3s ease;
     }
     span {
       position: absolute;
@@ -77,7 +77,7 @@ header {
       border: 1px solid $color-blue;
       border-radius: 50%;
       // box-shadow: 0px 0px 8px rgba($darkpurple, 0.4);
-      transition: all 0.3s ease;
+      // transition: all 0.3s ease;
       &:before {
         content: "";
         position: absolute;
@@ -114,7 +114,7 @@ header {
       &:before {
         transform: scale(2);
         opacity: 0;
-        transition: all 0.5s ease;
+        // transition: all 0.5s ease;
       }
       .fa-pen {
         display: none;
