--- a/src/app/portfolio-item/portfolio-item.component.html
+++ b/src/app/portfolio-item/portfolio-item.component.html
@@ -1,23 +1,29 @@
 <div class="container p-0" >
+  <!-- <div class="row">
+    <ng-container *ngFor="let type of types">
+      <button class="btn btn-primary">{{type.typeName}}</button>
+    </ng-container>
+  </div> -->
   <div class="row">
     <!-- Start Item Loop -->
-    <div class="col-md-4" *ngFor="let item of items" >
-      <div class="card mb-4 box-shadow {{item.type}}">
-        <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail" alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;" src={{item.image}} data-holder-rendered="true">
-        <div class="card-body"><h1>{{ item.name }}</h1>
-          <p class="card-text">{{ item.description }}</p>
-          <p class="card-text">{{ item.type }}</p>
-          <div class="d-flex justify-content-between align-items-center">
-            <div class="btn-group">
-              <button type="button" class="btn btn-sm btn-outline-secondary" routerLink="/portfolio/{{item.id}}" routerLinkActive="active" >View</button>
-             
+    <ng-container  *ngFor="let item of items">
+      <!--Prototypes-->
+        <div class="col-md-4" >
+          <div class="card mb-4 box-shadow {{item.type}}">
+            <div class="card-img-top" [style.background-image]="'url('+ item.image +')'" data-holder-rendered="true"  data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail" >
             </div>
-            <!-- <small class="text-muted">9 mins</small> -->
-
+            <div class="card-body"><h1>{{ item.name }}</h1>
+              <p class="card-text" [innerHTML]="item.description"></p>
+              <p class="card-text"><b>Project Type:</b> {{ item.type }}</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <button type="button" class="btn w-100 btn-outline-secondary" routerLink="/portfolio/{{item.id}}" routerLinkActive="active" >View More</button>
+                </div>
+              </div>
+            </div>
           </div>
-        </div>
       </div>
-    </div>
+  </ng-container>
     <!-- End Item Loop -->
   </div>
 </div>
