Production review changes. IN PRODUCTION!

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -4,7 +4,7 @@
             <div class="row h-100">
                 <div class="col text-center align-self-center">
 
-                    <div> <img src="http://www.charliehogland.com/wp-content/uploads/2020/03/Hog_LinkedIn.jpg" alt="" />
+                    <div class="mt-4"> <img src="http://www.charliehogland.com/wp-content/uploads/2020/03/Hog_LinkedIn.jpg" alt="" />
                     </div>
                     <div class="row justify-content-center py-4">
                         <a target="_blank" class="a-blue contact-icon-a" style="box-shadow: none;"
@@ -80,7 +80,7 @@
         <div class="col-12 col-md-6 order-first order-md-last about-offline-profile-image">
             <div class="row h-100">
                 <div class="col text-center align-self-center">
-                    <div> <img class="curve"
+                    <div class="mt-4"> <img class="curve"
                             src="http://www.charliehogland.com/wp-content/uploads/2018/05/36416_414773060944_5665034_n.jpg"
                             alt=""></div>
                             <div class="row justify-content-center py-4">
