--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -65,7 +65,7 @@
           HELLO. MY NAME IS
         </div>
         <div class="header_lg p-0 m-0 text--white">
-          <a href="about">CHARLIE HOGLAND</a>
+          <a href="http://charliehogland.com">CHARLIE HOGLAND</a>
         </div>
         
         <div class="header_md text--orange showDeveloper">
@@ -75,14 +75,14 @@
             <span class="text--blue">I'M A</span> DRUMMER
           </div> -->
         <div class="header_sm text--orange showDeveloper">
-          designer | stategist | developer
+          designer | strategist | developer
         </div>
         <!-- <div class="header_sm text--orange showDrummer">
           live | recording 
         </div> -->
         
       </div>
-      <div class="col-auto pr-3 p-0">
+      <div class="col-auto pr-3 p-0 mobile-menu-adjust">
         <!-- <img src="../../assets/images/Charlie-Header.png" class="img-charlie d-none d-md-block showDeveloper" alt="Charlie Hogland" />
         <img src="../../assets/images/Charlie-Header_music.png" class="img-charlie d-none d-md-block showMusic" alt="Charlie Hogland" /> -->
         <div class="text-right pt-2">
@@ -90,7 +90,7 @@
           [attr.aria-expanded]="!isCollapsed" aria-controls="collapseBasic"></i>
         </div>
       </div>
-      <div class="col-12 col-auto text-right">
+      <div class="col-12 col-auto pt-2 pt-md-0 text-center text-md-right">
         <a class="text-muted" aria-disabled="true">Live Coding/Designing
             <span class="live-status offline p-1 ml-1">OFFLINE</span></a>
     </div>
